// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the subscription component matches the snapshot 1`] = `
<span>
  <img
    alt="Test is active"
    className="dhzOCo"
    src="test.jpg"
  />
  <img
    alt="Test2 is active"
    className="dhzOCo"
    src="test.jpg"
  />
  <img
    alt="Test3 is inactive"
    className="snIQS"
    src="test.jpg"
  />
  <img
    alt="Test4 is inactive"
    className="snIQS"
    src="test.jpg"
  />
</span>
`;

exports[`the subscription component with plugins without active subscriptions using the default matches the snapshot 1`] = `
<span>
  <img
    alt="Test is inactive"
    className="snIQS"
    src="test.jpg"
  />
  <img
    alt="Test2 is inactive"
    className="snIQS"
    src="test.jpg"
  />
  <img
    alt="Test3 is inactive"
    className="snIQS"
    src="test.jpg"
  />
  <img
    alt="Test4 is inactive"
    className="snIQS"
    src="test.jpg"
  />
</span>
`;

exports[`the subscription component without plugins or active subscriptions using the default matches the snapshot 1`] = `<span />`;

exports[`the subscription component without plugins with active subscriptions using the default matches the snapshot 1`] = `<span />`;
